--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.17",
     "@shopify/flash-list": "1.7.3",
-    "expo-dev-client": "~5.0.12"
+    "expo-dev-client": "~5.0.12",
+    "expo-camera": "~16.0.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
